Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48526

Conformance issue, should not fail creation of of canvas larger than maximum possible

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.6.0 Beta
    • 5.6.0 Alpha
    • Canvas3D
    • None
    • 6c27d2fc7d6640f83500307a63a002f7a7711e93

      Conformance test Canvas3D_conformance_drawingbuffer_test::test_drawingbuffer_test_2() fails, as canvas doesn't fulfill the WebGL spec 2.2: "If the requested width or height cannot be satisfied, either when the drawing buffer is first created or when the width and height attributes of the HTMLCanvasElement are changed, a drawing buffer with smaller dimensions shall be created. "

        For Gerrit Dashboard: QTBUG-48526
        # Subject Branch Project Status CR V

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes