Fix drawbuffer size limiting

The canvas size itself shouldn't be limited by maximum possible
viewport size, but instead the draw buffer size should be limited.

Removing width and height properties should not be a problem,
as they were undocumented overloads of QQuickItem properties
with same name.

Change-Id: Ie5a4e65fbb877a8321e6b2e131c8b268b518218b
Task-number: QTBUG-48526
Reviewed-by: Tomi Korpipää <tomi.korpipaa@theqtcompany.com>
Reviewed-by: Pasi Keränen <pasi.keranen@digia.com>